# boj-jandi-site

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: build-image.yml
app/: collect_tiers.py  database.py  main.py  models.py  scraper.py
app/static/: style.css
app/templates/: base.html  grass.html  index.html
infra/db-init/: init.sql
infra/k8s/common/: configmap.yml  namespace.yml
infra/k8s/cron/: tier-collection.yaml
infra/k8s/postgresql/: service.yml  stateful_set.yml
infra/k8s/webapp/: certificate.yml  deployment.yml  ingress.yml  ingress_route.yml  service.yml
